# moomoo-portfolio-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-frontend.yml
app/: config.py  main.py
app/adapters/: __init__.py  fx_converter.py  moomoo_adapter.py  moomoo_client.py  option_parser.py
app/api/: routes.py
app/migrations/: 001_init.sql
app/models/: __init__.py  dashboard.py  errors.py  snapshots.py
app/repositories/: __init__.py  sqlite_snapshot_repo.py
app/services/: __init__.py  dashboard_service.py  scheduler_service.py  sync_service.py
app/static/: config.example.js  dashboard.js  index.html  styles.css
docs/requirements/: 2026-06-01-moomoo-adapter-mapping.md  2026-06-01-moomoo-data-requirements.md  2026-06-01-moomoo-sync-flow.md  2026-06-01-portfolio-dashboard-prd.md  2026-06-01-sqlite-schema.md  2026-06-02-stock-category-classification.md
docs/superpowers/plans/: 2026-06-01-portfolio-dashboard-implementation-plan.md
docs/superpowers/specs/: 2026-06-01-portfolio-dashboard-design.md
scripts/: build_frontend.py
tests/: test_api.py  test_dashboard_service.py  test_frontend_build.py  test_fx_converter.py  test_moomoo_adapter.py  test_moomoo_client.py  test_option_parser.py  test_project_metadata.py  test_scheduler_service.py  test_sqlite_repo.py  test_sync_service.py
