[project]
name = "portfolio-dashboard"
version = "1.2.0"
description = "Local moomoo portfolio dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "apscheduler>=3.10",
  "moomoo-api>=0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
